--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,8 +1,11 @@
+name: OpenAPI Checks
 on:
-  - push
-
+ - push
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - run: echo "Building..."
+ Checks:
+  runs-on: ubuntu-latest
+  steps:
+    - uses: actions/checkout@v4
+    - uses: actions/setup-node@v3
+    - run: npm install -g @stoplight/spectral-cli
+    - run: spectral lint rfq-api-v1.oas.yml 
